syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting{
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest{
  Greeting greeting = 1;
}

message GreetManyTimesResponse{
  string result = 1;
}

message LongGreetRequest{
  Greeting greeting = 1;
}

message LongGreetResponse{
  string result = 1;
}

message GreetEveryoneRequest{
  Greeting greeting = 1;
}

message GreetEveryoneResponse{
  string result = 1;
}

message SquareRootRequest {
  int32 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}

service GreetService {
  //Unary
  rpc Greet(GreetRequest) returns (GreetResponse){};

  // sERVER STREAMING
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){};

  // Client Streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){}

  // Bidirectional Streaming
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){}

  //error handling
  //this RPC will throw an exception if sent number is negative
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}